2005-02-25 Ian Rutt
 * Finished updating GLINT documentation

2005-02-24 Ian Rutt
 * Updated GLINT documetation, resurrected some old stuff about using
   GLINT, and added a diagram about timestepping. This is perhaps a bit big
   atm...
 * Changed doc build so that DIA doesn't display splash screen (added -n)
 * Added old LaTeX for GLINT API as appendix and started updating
   it. Incomplete, though.

2005-02-23 Ian Rutt
 * Renamed modules of mass-balance schemes to glimmer_*
 * Completed implementation of renaming scheme
	
2005-02-23 Magnus Hagdorn
 * removed old tests in data

2005-02-23 Magnus Hagdorn
 * removed unused symbols and dummy arguments

2005-02-23 Ian Rutt
 * More reorganisation and pruning
 * Set all times and timesteps in GLINT to be in *hours*, converted to
   years when calling GLIDE
 * All times in GLINT are integer type
 * Implemented mass-balance timesteps in GLINT - all instances must have
   the same mass-balance timestep
 * Moved specification of earth's radius in glimmer_proj.f90 to config file
   input
 * New file - glint_constants.f90 - mostly for conversion between different
   time units.
 * Removed redundant Matlab code
 * Removed redundant config files from data directory
 * Renamed enmabal module to glint_enmabal

2005-02-22 Ian Rutt
 * Substantial reorganisation of GLINT. 
 * Added wrapper for mass-balance schemes (glint_mbal.f90)
 * Moved some parts of timestep into glint_climate.f90
 * Build may need fixing under Linux
 * Variable mass-balance timestep still to be reimplemented

2005-02-22 Magnus Hagdorn
 * glide_types.f90: fixed two bugs where arrays had the wrong size

2005-02-21 Ian Rutt
 * Removed redundant argument from calcacab call in GLINT
 * Fixed lapse-rate adjustment problem in GLINT
 * Removed scaling on output of precip field in GLINT

2005-02-18 Ian Rutt
 * Added fix_acab call to glint_timestep.f90
 * Converted precip to m in glint_timestep.f90

2005-02-17 Ian Rutt