@@ -133,8 +133,7 @@ must be called:
 %
 \subsubsection{API}
 %
-A detailed description of the GLINT API will form an appendix to this document
-at some point.
+A detailed description of the GLINT API may be found in the appendices.
 %
 \subsubsection{Configuration}
 %
@@ -213,7 +212,7 @@ GLINT are as follows:
     \texttt{acab\_mode} & {\raggedright
       Mass-balance model to use:\\
       \begin{tabular}{lp{7cm}}
-        {\bf 1} & Annual PDD mass-balance model \\
+        {\bf 1} & Annual PDD mass-balance model (see section \ref{ug.mbal.pdd_scheme}) \\
         2 & Annual accumulation only\\
 	3 & Hourly energy-balance model (RAPID - not yet available) \\
       \end{tabular}}\\
